<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.rapidpm.course.java8</groupId>
    <artifactId>gi</artifactId>
    <version>1.0-SNAPSHOT</version>



    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <nexus.ip>nexus.rapidpm.org</nexus.ip>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.3</version>
            </dependency>

            <dependency>
                <groupId>com.airhacks</groupId>
                <artifactId>afterburner.fx</artifactId>
                <version>1.6.2</version>
            </dependency>

            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>1.6.1</version>
                <!--<scope>test</scope>-->
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core-benchmarks</artifactId>
                <version>1.6.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>1.6.1</version>
                <!--<scope>provided</scope>-->
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-reflection</artifactId>
                <version>1.6.1</version>
                <scope>test</scope>
            </dependency>



            <!--hazelcast-->
            <dependency>
                <groupId>com.hazelcast</groupId>
                <artifactId>hazelcast-all</artifactId>
                <version>3.4.1</version>
            </dependency>


            <!--Logging testing stuff-->

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>1.5.10</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>

            <!--<dependency>-->
                <!--<groupId>org.testfx</groupId>-->
                <!--<artifactId>testfx-core</artifactId>-->
                <!--<version>4.0.0-SNAPSHOT</version>-->
                <!--<scope>test</scope>-->
            <!--</dependency>-->


            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>org.rapidpm.modul</groupId>-->
            <!--<artifactId>cdi-commons</artifactId>-->
            <!--<version>2.0.2-SNAPSHOT</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>

        <dependency>
            <groupId>com.airhacks</groupId>
            <artifactId>afterburner.fx</artifactId>
        </dependency>


        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <!--<dependency>-->
            <!--<groupId>org.testfx</groupId>-->
            <!--<artifactId>testfx-core</artifactId>-->
            <!--<scope>test</scope>-->
        <!--</dependency>-->
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <!--<dependencies>-->
                <!--<dependency>-->
                <!--<groupId>org.apache.maven.surefire</groupId>-->
                <!--<artifactId>surefire-junit47</artifactId>-->
                <!--<version>2.16</version>-->
                <!--</dependency>-->
                <!--</dependencies>-->
                <configuration>
                    <!--<skipTests>true</skipTests>-->
                    <!--<forkCount>2.5C</forkCount>-->
                    <!--<forkCount>1</forkCount>-->
                    <!--<parallel>methods</parallel>-->
                    <!--<threadCount>10</threadCount>-->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <!--<argLine>-Xmx1024m</argLine>-->
                    <!--<forkMode>always</forkMode>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-repository-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
        </plugins>
    </build>

    <!--for development of features/develop branch-->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>RapidPM Releases</name>
            <url>http://${nexus.ip}/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>RapidPM Snapshots</name>
            <url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <profiles>
        <profile>
            <id>junit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/junit/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/perf/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>performance</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/perf/**</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <id>arquillian_weld-ee-embedded-11</id>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.arquillian.container</groupId>
                    <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
                    <version>1.0.0.CR7</version>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-core</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.jboss.weld</groupId>
                    <artifactId>weld-api</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.jboss.ejb3</groupId>
                    <artifactId>jboss-ejb3-api</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </dependency>
                <!--Arquillian-->
                <dependency>
                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
                    <artifactId>shrinkwrap-resolver-depchain</artifactId>
                    <type>pom</type>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.arquillian.junit</groupId>
                    <artifactId>arquillian-junit-container</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.shrinkwrap</groupId>
                    <artifactId>shrinkwrap-api</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.jboss.shrinkwrap</groupId>
                    <artifactId>shrinkwrap-impl-base</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.jboss.weld</groupId>
                        <artifactId>weld-core-bom</artifactId>
                        <version>2.1.0.Final</version>
                        <type>pom</type>
                        <scope>import</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.ejb3</groupId>
                        <artifactId>jboss-ejb3-api</artifactId>
                        <version>3.1.0</version>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.shrinkwrap.resolver</groupId>
                        <artifactId>shrinkwrap-resolver-bom</artifactId>
                        <version>2.1.0-alpha-1</version>
                        <type>pom</type>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.shrinkwrap</groupId>
                        <artifactId>shrinkwrap-depchain</artifactId>
                        <version>1.2.0</version>
                        <type>pom</type>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.arquillian</groupId>
                        <artifactId>arquillian-bom</artifactId>
                        <version>1.1.2.Final</version>
                        <scope>import</scope>
                        <type>pom</type>
                    </dependency>

                    <dependency>
                        <groupId>org.jboss.shrinkwrap.descriptors</groupId>
                        <artifactId>shrinkwrap-descriptors-bom</artifactId>
                        <version>2.0.0-alpha-5</version>
                        <scope>test</scope>
                        <type>pom</type>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.shrinkwrap.resolver</groupId>
                        <artifactId>shrinkwrap-resolver-depchain</artifactId>
                        <version>2.0.1</version>
                        <type>pom</type>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.arquillian.junit</groupId>
                        <artifactId>arquillian-junit-container</artifactId>
                        <version>1.1.2.Final</version>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.shrinkwrap</groupId>
                        <artifactId>shrinkwrap-api</artifactId>
                        <version>1.2.0</version>
                        <scope>test</scope>
                    </dependency>
                    <dependency>
                        <groupId>org.jboss.shrinkwrap.resolver</groupId>
                        <artifactId>shrinkwrap-resolver-api-maven</artifactId>
                        <version>2.0.1</version>
                        <scope>test</scope>
                    </dependency>

                    <dependency>
                        <groupId>org.jboss.shrinkwrap</groupId>
                        <artifactId>shrinkwrap-impl-base</artifactId>
                        <version>1.2.0</version>
                        <scope>test</scope>
                    </dependency>

                </dependencies>
            </dependencyManagement>
        </profile>
    </profiles>

    <inceptionYear>2013</inceptionYear>
    <organization>
        <name>RapidPM</name>
        <url>http://www.rapidpm.org</url>
    </organization>
    <scm>
        <url>http://stash.rapidpm.org/scm/kurse/kurs-java8</url>
        <connection>scm:git:http://stash.rapidpm.org/scm/kurse/kurs-java8.git</connection>
        <developerConnection>scm:git:http://stash.rapidpm.org/scm/kurse/kurs-java8.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>Sven Ruppert</name>
            <email>sven.ruppert@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <!--<issueManagement>-->
    <!--<system>Jira</system>-->
    <!--<url>https://bitbucket.org/rapidpm/rapidpm-modules/issues</url>-->
    <!--</issueManagement>-->
    <!--<ciManagement>-->
    <!--<system>Jenkins</system>-->
    <!--<url>http://jenkins.rapidpm.org/job/rapidpm-modules/</url>-->
    <!--<notifiers>-->
    <!--<notifier></notifier>-->
    <!--</notifiers>-->
    <!--</ciManagement>-->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

</project>